--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -19,12 +19,13 @@
                                 src="./../../assets/img/contact/error.png">
                             <img *ngIf="meinFormular.get('name').valid" src="./../../assets/img/contact/ok.png">
                         </div>
-                        <div class="error-message-container" [ngClass]="{'error-active': meinFormular.get('name').invalid &&
-                            (meinFormular.get('name').dirty || meinFormular.get('name').touched)}">
-                            <div class="error-message-active" *ngIf="meinFormular.get('name').invalid &&
-                            (meinFormular.get('name').dirty || meinFormular.get('name').touched)">
-                                Your name is required
-                            </div>
+                    </div>
+
+                    <div class="error-message-container" [ngClass]="{'error-active': meinFormular.get('name').invalid &&
+                        (meinFormular.get('name').dirty || meinFormular.get('name').touched)}">
+                        <div class="error-message-active" *ngIf="meinFormular.get('name').invalid &&
+                        (meinFormular.get('name').dirty || meinFormular.get('name').touched)">
+                            Your name is required
                         </div>
                     </div>
 
@@ -36,12 +37,13 @@
                                 src="./../../assets/img/contact/error.png">
                             <img *ngIf="meinFormular.get('email').valid" src="./../../assets/img/contact/ok.png">
                         </div>
-                        <div class="error-message-container" [ngClass]="{'error-active': meinFormular.get('email').invalid &&
+                    </div>
+
+                    <div class="error-message-container" [ngClass]="{'error-active': meinFormular.get('email').invalid &&
                         (meinFormular.get('email').dirty || meinFormular.get('email').touched)}">
-                            <div class="error-message-active" *ngIf="meinFormular.get('email').invalid &&
+                        <div class="error-message-active" *ngIf="meinFormular.get('email').invalid &&
                         (meinFormular.get('email').dirty || meinFormular.get('email').touched)">
-                                Your email is required
-                            </div>
+                            Your email is required
                         </div>
                     </div>
 
@@ -55,31 +57,31 @@
                                 src="./../../assets/img/contact/error.png">
                             <img *ngIf="meinFormular.get('message').valid" src="./../../assets/img/contact/ok.png">
                         </div>
+                    </div>
 
-                        <div class="error-message-container" [ngClass]="{'error-active': meinFormular.get('message').invalid &&
+                    <div class="error-message-container" [ngClass]="{'error-active': meinFormular.get('message').invalid &&
                             (meinFormular.get('message').dirty || meinFormular.get('message').touched)}">
-                            <div class="error-message-active" *ngIf="meinFormular.get('message').invalid &&
+                        <div class="error-message-active" *ngIf="meinFormular.get('message').invalid &&
                             (meinFormular.get('message').dirty || meinFormular.get('message').touched)">
-                                Your message is empty
-                            </div>
+                            Your message is empty
                         </div>
                     </div>
 
+                    <div class="privacy-policy-box">
+                        <div class="agree-hover" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
+                            <label class="agree-box">
+                                <input type="checkbox" formControlName="checkBox"><!--  (change)="onCheckboxChange()" -->
+                                <span class="checkmark"></span>
+                            </label>
+                        </div>
+                        <p>I've read the</p>
+                        <div class="privacy-policy-link"><a [ngClass]="{'hovered': isHovered}" href="#">privacy
+                                policy</a>
+                        </div>
+                        <p> and agree to the processing of my data as outlined.</p>
+                    </div>
                 </form>
-
-                <div class="privacy-policy-box">
-                    <div class="agree-hover" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
-                        <label class="agree-box">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                        </label>
-                    </div>
-                    <p>I've read the</p>
-                    <div class="privacy-policy-link"><a [ngClass]="{'hovered': isHovered}" href="#">privacy policy</a>
-                    </div>
-                    <p> and agree to the processing of my data as outlined.</p>
-                </div>
-                <button>Send Message</button>
+                <button (click)="logFormValue()" [ngClass]="{'active': meinFormular.valid}" [disabled]="!meinFormular.valid">Send Message</button>
             </div>
         </div>
         <div class="footer">
