--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -69,7 +69,7 @@
                         height: 30px;
                         width: 30px;
                         position: absolute;
-                        bottom: 25px;
+                        bottom: 5px;
                         right: -7px;
                         pointer-events: none;
                         background: url("./../../assets/img/contact/resizer.png") no-repeat scroll right 15px center;
@@ -113,24 +113,6 @@
                         top: 15px;
                         right: 25px;
                     }
-
-                    .error-message-container {
-                        padding: 8px;
-                        animation: slide-in 0.2s ease-in-out;
-
-                        .error-message-active {
-                            font-family: Overpass;
-                            font-size: 12px;
-                            color: #E61C40;
-                            padding-top: 5px;
-                            padding-bottom: 18px;
-                            animation: slide-in 0.2s ease-in-out;
-                        }
-                    }
-
-                    .error-active {
-                        padding: 0 !important;
-                    }
                 }
 
                 textarea {
@@ -142,6 +124,24 @@
 
                 textarea::-webkit-resizer {
                     display: none;
+                }
+
+                .error-message-container {
+                    height: 16px;
+
+                    .error-message-active {
+                        font-family: Overpass;
+                        font-size: 12px;
+                        color: #E61C40;
+                        padding-top: 5px;
+                        padding-bottom: 18px;
+                        animation: slide-in 0.2s ease-in-out;
+                    }
+                }
+
+                .error-active {
+
+                    animation: slide-out 0.2s ease-in-out forwards;
                 }
 
                 .privacy-policy-box {
@@ -243,6 +243,10 @@
                     font-weight: 400;
                     text-align: center;
                 }
+
+                .active {
+                    animation: button-active 0.92 ease-in-out forwards;
+                }
             }
         }
 
@@ -297,14 +301,36 @@
 
 @keyframes slide-in {
     0% {
-      opacity: 0;
-      transform: translateY(-50%);
+        opacity: 0;
+        transform: translateY(-50%);
     }
+
     80% {
         opacity: 0;
     }
+
     100% {
-      opacity: 1;
-      transform: translateY(0);
+        opacity: 1;
+        transform: translateY(0);
     }
-  }
+}
+
+@keyframes slide-out {
+    0% {
+        height: 16px;
+    }
+
+    100% {
+        height: 40px;
+    }
+}
+
+@keyframes button-active {
+    0% {
+        opacity: 0.3;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
