--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,3 +1,8 @@
+$boarder-container-height: 170px;
+$boarder-container-width: 580px;
+$font-sice-nav: 96px;
+
+
 .nav-container {
     width: 100vw;
     display: flex;
@@ -50,9 +55,9 @@ nav {
     flex-grow: 1;
 }
 
-.border-base {
-    height: 170px;
-    width: 580px;
+@mixin border-base($boarder-container-height, $boarder-container-width, $font-sice-nav) {
+    height: $boarder-container-height;
+    width: $boarder-container-width;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,12 +71,12 @@ nav {
         left: 0;
         border-bottom: 4px solid black;
         border-left: 4px solid black;
-        width: 39px;
-        height: 52px;
+        width: 6.7%;
+        height: 30.6%;
     }
 
     a {
-        font-size: 96px;
+        font-size: $font-sice-nav;
         font-weight: 700;
         font-family: Syne;
         color: #000000;
@@ -80,11 +85,11 @@ nav {
 }
 
 .border {
-    @extend .border-base;
+    @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
 }
 
 .border-hover {
-    @extend .border-base;
+    @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
 
     &::before {
         animation: border-animation 0.2s ease-out;
@@ -93,13 +98,13 @@ nav {
 }
 
 .border-active {
-    @extend .border-base;
+    @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
 
     &::before {
         bottom: 0;
         left: 0;
-        height: 170px;
-        width: 600px;
+        height: 100% !important;
+        width: 100% !important;
         border: 4px solid black;
     }
 }
@@ -107,25 +112,25 @@ nav {
 @keyframes border-animation {
     35% {
         height: 0px;
-        width: 39px;
+        width: 6.7%;
         left: 0px;
     }
 
     45% {
-        width: 600px;
+        width: 100%;
     }
 
     70% {
         height: 0px;
-        width: 600px;
+        width: 100%;
         left: 0px;
 
     }
 
     100% {
         height: 0px;
-        width: 250px;
-        left: 350px;
+        width: 43.1%;
+        left: 56.9%;
     }
 }
 
@@ -362,21 +367,48 @@ nav {
     }
 }
 
-@media (max-width: 1024px) and (min-aspect-ratio: 9/16) {
+@media (max-width: 1024px) {//and (min-aspect-ratio: 9/16) 
+    $boarder-container-height: 80px;
+    $boarder-container-width: 280px;
+    $font-sice-nav: 45px;
+
     nav {
         background-color: #1cf000 !important;
+        justify-content: center;
     }
+
+    .border {
+        @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
+    }
+
+    .border-hover {
+        @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
+    }
+
+    .border-active {
+        @include border-base($boarder-container-height, $boarder-container-width, $font-sice-nav);
+    }
+
+    #aboutMeLink,
+    #mySkillsLink {
+        margin-bottom: 10%;
+    }
+
+
+
 
     .menu-footer-content {
         flex-direction: column;
         justify-content: space-between;
         padding: 0% 5% 50px;
 
-        div {
+        div:first-child {
             align-self: flex-start;
+            margin-top: 60px;
+            width: 100%;
 
             p {
-                font-size: 48px !important;
+                font-size: 45px !important;
                 animation: pulse-white 2.75s infinite ease-in-out;
             }
 
@@ -400,79 +432,23 @@ nav {
 
             a {
                 font-size: 23px;
-                font-family: Overpass;
+                font-weight: 300 !important;
             }
         }
 
         .links {
-            width: 200px;
             align-self: flex-end;
-
-            a {
-                cursor: pointer;
-
-                img {
-                    height: 40px;
-                    padding-bottom: 0;
-                    padding-top: 10px;
-                }
-            }
         }
     }
 }
 
-@media (max-width: 1024px) and (max-aspect-ratio: 9/16) {
-    nav {
-        background-color: #b60000 !important;
-    }
 
-    .menu-footer-content {
-        clip-path: polygon(0 0, 100% 11vw, 100% 100%, 0% 100%);
-        background-color: #000000;
-        height: 250px;
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
-        padding: 0% 5% 50px;
 
-        p,
-        a {
-            color: #FFFCF3;
-            text-decoration: none;
-        }
 
-        p {
-            font-size: 78px;
-            font-family: Syne;
-            font-weight: 800;
-            margin: 0;
 
-            &:hover {
-                transition: color 0.190s ease-in-out;
-                color: #00BC8F;
-            }
-        }
 
-        a {
-            font-size: 23px;
-            font-family: Overpass;
-        }
-
-        .links {
-            width: 200px;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-end;
-
-            a {
-                cursor: pointer;
-
-                img {
-                    height: 40px;
-                    padding-bottom: 0;
-                    padding-top: 10px;
-                }
-            }
-        }
-    }
-}
+// @media (max-width: 1024px) and (max-aspect-ratio: 9/16) {
+//     nav {
+//         background-color: #b60000 !important;
+//     }
+// }
